attempt to fix spacing issues

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -877,10 +877,6 @@ video {
   padding-bottom: 3rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .shadow-lg {
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
@@ -1192,6 +1188,10 @@ video {
 
   .md\:pt-10 {
     padding-top: 2.5rem;
+  }
+
+  .md\:pt-16 {
+    padding-top: 4rem;
   }
 
   .md\:pl-24 {
